force-app/main/default/objects/FieloPLT__Agreement__c/FieloPLT__Agreement__c.object-meta.xml
<CustomObject>
    <description>Terms and conditions of service that Members need to accept in order to be part of the loyalty Program in which you wish to include them.</description>
    <label>Agreement</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Version</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>