force-app/main/default/objects/FieloPLT__Agreement__c/fields/FieloPLT__Agreement__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Agreement__c</fullName>
    <description>Agreement terms and conditions.</description>
    <inlineHelpText>Enter the Agreement terms and conditions.</inlineHelpText>
    <label>Agreement</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>