force-app/main/default/objects/FieloPLT__Agreement__c/fields/FieloPLT__Program__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It shows the Program which the Agreement belongs to.</description>
    <inlineHelpText>Choose the Program which the Agreement belongs to.</inlineHelpText>
    <label>Program</label>
    <referenceTo>FieloPLT__Program__c</referenceTo>
    <relationshipLabel>Agreements</relationshipLabel>
    <relationshipName>Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>