force-app/main/default/objects/FieloPLT__Agreement__c/fields/FieloPLT__Status__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Status__c</fullName>
    <description>Agreement status: Draft, Current, Active or Deprecated.</description>
    <inlineHelpText>Agreement status: Draft, Current, Active or Deprecated.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Current</fullName>
            </value>
            <value>
                <fullName>Deprecated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>