force-app/main/default/objects/FieloPLT__Agreement__c/recordTypes/FieloPLT__Active.recordType-meta.xml
<RecordType>
    <fullName>FieloPLT__Active</fullName>
    <active>true</active>
    <description>The Agreement status is Active.</description>
    <label>Active</label>
</RecordType>