force-app/main/default/objects/FieloPLT__Agreement__c/recordTypes/FieloPLT__Draft.recordType-meta.xml
<RecordType>
    <fullName>FieloPLT__Draft</fullName>
    <active>true</active>
    <description>The Agreement status is Draft.</description>
    <label>Draft</label>
</RecordType>