force-app/main/default/objects/FieloPLT__Agreement__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>FieloPLT__Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
    <language>pt_BR</language>
</ListView>