force-app/main/default/objects/FieloPLT__Agreement__c/listViews/FieloPLT__All.listView-meta.xml
<ListView>
    <fullName>FieloPLT__All</fullName>
    <columns>NAME</columns>
    <columns>FieloPLT__Program__c</columns>
    <columns>FieloPLT__Agreement__c</columns>
    <columns>FieloPLT__Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Agreements</label>
    <language>en_US</language>
</ListView>